--- a/index.html
+++ b/index.html
@@ -299,8 +299,21 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
+              <h4>Internee | Flutter</h4>
+              <h5>March 2023 - Current | (Remote)</h5>
+
+              <p><em>Bytewise, Pakistan</em></p>
+              <ul>
+                <!-- <li>Implemented the solution for the categorization of field camera images to spread awareness and
+                  monitor predator activities to save Bilby from extinction. </li>
+                <li>Integrated Firebase, FCM, and EmailJS API for predator activities email notification. </li>
+                <li>Used EmailJS API to send notification emails</li>
+                <li>Desingned admin page for images management , upload , and users emails export for newsletters</li> -->
+              </ul>
+            </div>
+            <div class="resume-item">
               <h4>Flutter App Developer</h4>
-              <h5>Freelancing</h5>
+              <h5>December 2022 -  February 2023 | Freelancing</h5>
               <p><em>Save The Bilby Fund, Australia </em></p>
               <ul>
                 <li>Implemented the solution for the categorization of field camera images to spread awareness and
