--- a/GroupTeaDetails.html
+++ b/GroupTeaDetails.html
@@ -116,7 +116,7 @@
               <ul>
                 <li><strong>Category</strong>: Flutter App</li>
                 <li><strong>Client</strong>: Personal Project</li>
-                <li><strong>Project URL</strong>: <a href="#">https://github.com/ahmaddioxide/GroupTea</a></li>
+                <li><strong>Project URL</strong>: <a href="https://github.com/ahmaddioxide/GroupTea">https://github.com/ahmaddioxide/GroupTea</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
