--- a/SaveBilbyDetails.html
+++ b/SaveBilbyDetails.html
@@ -107,7 +107,7 @@
                 <li><strong>Category</strong>: Flutter App</li>
                 <li><strong>Client</strong>: Save The Bilby Fund, Australia</li>
                 <!-- <li><strong>Project date</strong>: 01 March, 2020</li> -->
-                <li><strong>Project URL</strong>: <a href="#">https://github.com/ahmaddioxide/Save_Bilby</a></li>
+                <li><strong>Project URL</strong>: <a href="https://github.com/ahmaddioxide/Save_Bilby">https://github.com/ahmaddioxide/Save_Bilby</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
