--- a/index.html
+++ b/index.html
@@ -299,16 +299,29 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Internee | Flutter</h4>
-              <h5>March 2023 - Current | (Remote)</h5>
-
+              <h4>Flutter Developer</h4>
+              <h5>April 2023 - Current</h5>
+              <p><em>CYBRNODE, Lahore</em></p>
+              <!-- <ul>
+                <li>Front-end development of a soon-to-be-launched product using Flutter. </li>
+                <li>Collaborating with the development team to ensure successful feature implementation.</li>
+                <li>Testing, debugging, and troubleshooting to meet quality standards.</li>
+                <li>Developing new features and improving performance and user experience.</li>
+                <li>Keen attention to detail and collaborative problem-solving approach.</li>
+                <li>Ability to work well in a team environment and communicate effectively with others.</li>
+              </ul> -->
+            </div>
+            <div class="resume-item">
+              <h4>Flutter Developer</h4>
+              <h5>March 2023 - Current | Internship</h5>
               <p><em>Bytewise, Pakistan</em></p>
               <ul>
-                <!-- <li>Implemented the solution for the categorization of field camera images to spread awareness and
-                  monitor predator activities to save Bilby from extinction. </li>
-                <li>Integrated Firebase, FCM, and EmailJS API for predator activities email notification. </li>
-                <li>Used EmailJS API to send notification emails</li>
-                <li>Desingned admin page for images management , upload , and users emails export for newsletters</li> -->
+                <li>Front-end development of a soon-to-be-launched product using Flutter. </li>
+                <li>Collaborating with the development team to ensure successful feature implementation.</li>
+                <li>Testing, debugging, and troubleshooting to meet quality standards.</li>
+                <li>Developing new features and improving performance and user experience.</li>
+                <li>Keen attention to detail and collaborative problem-solving approach.</li>
+                <li>Ability to work well in a team environment and communicate effectively with others.</li>
               </ul>
             </div>
             <div class="resume-item">
