Emergency App Added

--- a/index.html
+++ b/index.html
@@ -404,9 +404,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/SaveBilby.jpg" class="img-fluid  portfolio-image" alt="">
+              <img src="assets/img/portfolio/SaveBilby.png" class="img-fluid  portfolio-image" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/SaveBilby.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                <a href="assets/img/portfolio/SaveBilby.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                   title="Save Bilby"><i class="bx bx-plus"></i></a>
                 <a href="SaveBilbyDetails.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
@@ -423,6 +423,26 @@
               </div>
             </div>
           </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/EmergencyApp.png" class="img-fluid portfolio-image" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/EmergencyApp.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                  title="Emergency Response App" <i class="bx bx-plus"></i></a>
+                <a href="EmergencyAppDetails.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/EmergencyApp.png" class="img-fluid portfolio-image" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/EmergencyApp.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                  title="Emergency Response App" <i class="bx bx-plus"></i></a>
+                <a href="EmergencyAppDetails.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div> -->
 
         </div>
 
