--- a/EmergencyAppDetails.html
+++ b/EmergencyAppDetails.html
@@ -11,7 +11,7 @@
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <!-- <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon"> -->
 
   <!-- Google Fonts -->
   <link
@@ -51,6 +51,7 @@
           <a href="https://www.instagram.com/ahmaddioxide/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
+
       <nav id="navbar" class="nav-menu navbar">
         <ul>
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
@@ -93,8 +94,12 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/SaveBilby.png" alt="">
+                  <img src="assets/img/portfolio/EmergencyApp.png" alt="">
                 </div>
+
+              
+
+
               </div>
               <div class="swiper-pagination"></div>
             </div>
@@ -104,28 +109,21 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Flutter App</li>
-                <li><strong>Client</strong>: Save The Bilby Fund, Australia</li>
-                <!-- <li><strong>Project date</strong>: 01 March, 2020</li> -->
-                <li><strong>Project URL</strong>: <a href="https://github.com/ahmaddioxide/Save_Bilby">https://github.com/ahmaddioxide/Save_Bilby</a></li>
+                <li><strong>Category</strong>: Flutter App & Web Application/li>
+                <li><strong>Client</strong>: Freelancing (FYP)</li>
+                <li><strong>Project URL</strong>: <a href="https://github.com/ahmaddioxide/public-emergency-app">https://github.com/ahmaddioxide/public-emergency-app</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Field Camera Images Categorization App</h2>
+              <h2>Emergency Response Mobile Application</h2>
               <p>
-                Save the Bilby is a mobile application developed using Flutter that helps categorize field camera images
-                for a conservation organization. The app utilizes Firebase Realtime Database and Firebase Authentication
-                as backend services to store data and authenticate users. Images are stored in Firebase Firestore, and
-                the EmailJS API is used to send notification emails to users. Additionally, push notifications are
-                implemented through Firebase Cloud Messaging, and state management is handled using the getX package.
-                The project also includes an admin page that allows for easy image management, uploading, and user email
-                exports for newsletters.
+                <br>This is a cross-platform mobile application designed to provide assistance in emergencies. 
+                The app incorporates specialized features for different user groups such as firefighters, ambulance personnel, police officers, and general users.
+                It leverages the power of Flutter, Firebase, and Google Maps API to deliver accurate and real-time information to both users and responders.
             </div>
           </div>
 
         </div>
-
-      </div>
     </section><!-- End Portfolio Details Section -->
 
   </main><!-- End #main -->
@@ -137,6 +135,10 @@
         &copy; Copyright <strong><span>ahmaddioxide</span></strong>
       </div>
       <div class="credits">
+        <!-- All the links in the footer should remain intact. -->
+        <!-- You can delete the links only if you purchased the pro version. -->
+        <!-- Licensing information: https://bootstrapmade.com/license/ -->
+        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
         Designed by <a href="https://github.com/ahmaddioxide/">ahmaddioxide</a>
       </div>
     </div>
