Fellowhip App Added

--- a/index.html
+++ b/index.html
@@ -373,12 +373,7 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Check out my app showcase to see some of my recent projects! From creating a cross-platform community
-            chatting app to developing an app that provides weather updates using OpenWeather API, I have experience in
-            hybrid and native app development. One of my most exciting projects involved working as a freelance
-            developer for Save The Bilby Fund, where I developed an app from scratch using Flutter, Firebase, and GetX.
-            I enjoy taking on new challenges and am always eager to create innovative solutions using the latest
-            technologies.</p>
+          <p>Check out my app showcase to see some of my recent projects!</p>
         </div>
 
         <div class="row" data-aos="fade-up">
@@ -433,16 +428,16 @@
               </div>
             </div>
           </div>
-          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/EmergencyApp.png" class="img-fluid portfolio-image" alt="">
+              <img src="assets/img/portfolio/FellowshipApp.jpg" class="img-fluid portfolio-image" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/EmergencyApp.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                  title="Emergency Response App" <i class="bx bx-plus"></i></a>
-                <a href="EmergencyAppDetails.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/FellowshipApp.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                  title="Fellowship App" <i class="bx bx-plus"></i></a>
+                <a href="FellowshipAppDetails.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
-          </div> -->
+          </div>
 
         </div>
 
