--- a/FellowshipAppDetails.html
+++ b/FellowshipAppDetails.html
@@ -109,7 +109,7 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Flutter App & Web Application/li>
+                <li><strong>Category</strong>: Flutter App & Web Application</li>
                 <li><strong>Client</strong>: Bytewise LTD</li>
                 <!-- <li><strong>Project URL</strong>: <a href="https://github.com/ahmaddioxide/public-emergency-app">https://github.com/ahmaddioxide/public-emergency-app</a></li> -->
               </ul>
