--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
       </div>
       <div class="credits">
 
-        Designed by <a href="https://github.com/ahmaddioxide/">ahmaddioxide</a>
+        Designed with ❤️ by <a href="https://github.com/ahmaddioxide/">ahmaddioxide</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
