LinkedIn URL updated

--- a/SaveBilbyDetails.html
+++ b/SaveBilbyDetails.html
@@ -48,7 +48,7 @@
           <a href="https://www.facebook.com/ahmaddioxide/" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="https://www.instagram.com/ahmaddioxide/" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="https://github.com/ahmaddioxide" class="github"><i class="bx bxl-github"></i></a>
-          <a href="https://www.instagram.com/ahmaddioxide/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/ahmaddioxide/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
       <nav id="navbar" class="nav-menu navbar">
