updated: Project added | small changes

--- a/CineMate.html
+++ b/CineMate.html
@@ -94,17 +94,17 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/PPocket.jpg" alt="">
+                  <img src="assets/img/portfolio/CineMateFeatureGraphics.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/PPocket-Logo.jpg" alt="">
+                  <img src="assets/img/portfolio/CineMateDemo1.png" alt="">
                 </div>
 
-                <!-- <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-3.jpg" alt="">
-                </div> -->
-
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/CineMateDemo2.png" alt="">
+                </div>
+        
               </div>
               <div class="swiper-pagination"></div>
             </div>
@@ -114,29 +114,41 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Flutter App & Desktop Application (integration)</li>
-                <li><strong>Client</strong>: My Final Year Project</li>
-                <!-- <li><strong>Project URL</strong>: <a href="#">https://github.com/ahmaddioxide/Save_Bilby</a></li> -->
+                <li><strong>Category</strong>: Futter Mobile App</li>
+                <!-- <li><strong>Client</strong>: FYP & Google Solutions Challenge</li> -->
+                <li><strong>Repository URL</strong>: <a href="https://github.com/ahmaddioxide/cinemate" target="_blank" >https://github.com/ahmaddioxide/cinemate</a></li>
+                <li><strong>PlayStore URL</strong>: <a href="https://play.google.com/store/apps/details?id=com.cybrnode.cinemate" target="_blank">https://play.google.com/store/apps/details?id=com.cybrnode.cinemate</a></li>
+
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>EcoReceipts: Your Sustainable Receipt and Budget Manager</h2>
+              <h2>CineMate- Your ultimate movie partner</h2>
+
               <p>
-                <br>This project is about creating a sustainable solution that eliminates the need for paper receipts by
-                generating Quick Response (QR) codes for invoices/receipts, which users can scan using a mobile app. The
-                app also offers budget management features that allow users to track their expenses and spending habits.
+               <br> CineMate is your ultimate movie companion, designed to elevate your movie-watching experience to new heights. This app offers a world of cinematic wonders at your fingertips.
 
-                <br><br>With this system, users can scan the QR code and store the bill's details in the app, allowing
-                them to view their receipts later without worrying about losing them. Shopkeepers will also have access
-                to a dashboard where they can keep track of receipts.
+<br>Key Features:
+<br><br>✨ Personalized Recommendations: Receive tailored movie suggestions based on your preferences and interests, ensuring you never miss a movie you'll love.
 
-                <br><br>The budget management feature helps users track their expenses and control their spending
-                habits. The app provides real-time feedback on spending habits and offers suggestions for cost-saving
-                measures. Additionally, the app uses data science to automatically deduct expenses from the user's
-                budget, allowing them to keep track of their expenses in real time.
+<br><br>📚 Detailed Movie Information: Dive deep into comprehensive movie details, including plot summaries, genres, release dates, runtimes, and more.
 
-                <br><br>This system offers a sustainable solution to eliminate paper receipts and provides an efficient
-                way to manage expenses and budget, making it an eco-friendly and practical choice for users.
+<br><br>👥 Cast & Crew Insights: Explore the talented actors, actresses, and directors behind your favorite films.
+
+<br><br>🌟 Reviews & Ratings: Make informed decisions with reviews from critics and fellow movie enthusiasts.
+
+<br><br>🔍 Find Movies by Genre: Customize your movie experience by exploring films based on your favorite genres.
+
+<br><br>🔥 Stay in the Loop: Stay up-to-date with the latest movie trends and popular releases, as well as movies currently playing in theaters.
+
+<br><br>🎉 Plan Your Movie Marathon: Create and manage watchlists to organize your movie-watching sessions.
+
+<br><br>🎞️ Discover Similar Movies: Uncover hidden gems and explore films similar to your favorites.
+
+<br><br>Whether you're a casual moviegoer or a true cinephile, CineMate is your go-to app for an enhanced movie-watching journey. Immerse yourself in the fascinating world of movies and create unforgettable cinematic memories with CineMate! 🎥🍿
+
+Download CineMate now and experience the magic of movies like never before.
+              </p>
+                
             </div>
 
           </div>
