--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Muhammad Ahmad Mahmood</h1>
-      <p>I'm <span class="typed" data-typed-items="Hybrid Apps Developer, Computer Scientist, Flutter Developer"></span>
+      <p>I'm <span class="typed" data-typed-items="Flutter Developer, Software Engineer, Mobile Apps Developer"></span>
       </p>
     </div>
   </section><!-- End Hero -->
@@ -402,15 +402,25 @@
           <p>Check out my app showcase to see some of my recent projects!</p>
         </div>
 
-        <div class="row" data-aos="fade-up">
+        <!-- <div class="row" data-aos="fade-up">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter=".filter-app">Projects</li>
             </ul>
           </div>
-        </div>
+        </div> -->
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/CineMateFeature.png" class="img-fluid portfolio-image" alt="">
+              <div class="portfolio-links">
+                <a href="aassets/img/portfolio/CineMateFeatureGraphics.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                  title="CineMate"><i class="bx bx-plus"></i></a>
+                <a href="CineMate.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
@@ -433,17 +443,6 @@
               </div>
             </div>
           </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/GroupTea.jpg" class="img-fluid portfolio-image" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/GroupTea.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                  title="Group Tea"><i class="bx bx-plus"></i></a>
-                <a href="GroupTeaDetails.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/EmergencyApp.png" class="img-fluid portfolio-image" alt="">
@@ -454,6 +453,17 @@
               </div>
             </div>
           </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/GroupTea.jpg" class="img-fluid portfolio-image" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/GroupTea.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                  title="Group Tea"><i class="bx bx-plus"></i></a>
+                <a href="GroupTeaDetails.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+          
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/FellowshipApp.jpg" class="img-fluid portfolio-image" alt="">
@@ -512,7 +522,7 @@
                 <a href="https://www.facebook.com/ahmaddioxide/" class="facebook"><i class="bx bxl-facebook"></i></a>
                 <a href="https://www.instagram.com/ahmaddioxide/" class="instagram"><i class="bx bxl-instagram"></i></a>
                 <a href="https://github.com/ahmaddioxide" class="github"><i class="bx bxl-github"></i></a>
-                <a href="https://www.instagram.com/ahmaddioxide/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/ahmaddioxide/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
               </div>
 
             </div>
