--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     </section><!-- End About Section -->
 
 
-    ======= Skills Section ======= -->
+    <!-- ======= Skills Section =======  -->
     <section id="skills" class="skills section-bg">
       <div class="container">
 
